crates/squawk_parser/src/snapshots/parser__test__drop_owned_ok.snap
---
source: crates/parser/src/test.rs
input_file: crates/parser/test_data/ok/drop_owned.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  DROP_OWNED_STMT
    DROP_KW "drop"
    WHITESPACE " "
    OWNED_KW "owned"
    WHITESPACE " "
    BY_KW "by"
    WHITESPACE " "
    IDENT "s"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  DROP_OWNED_STMT
    DROP_KW "drop"
    WHITESPACE " "
    OWNED_KW "owned"
    WHITESPACE " "
    BY_KW "by"
    WHITESPACE " "
    IDENT "a"
    COMMA ","
    WHITESPACE " "
    CURRENT_ROLE_KW "current_role"
    COMMA ","
    WHITESPACE " "
    IDENT "c"
    WHITESPACE " "
    CASCADE_KW "cascade"
  SEMICOLON ";"
  WHITESPACE "\n"
  DROP_OWNED_STMT
    DROP_KW "drop"
    WHITESPACE " "
    OWNED_KW "owned"
    WHITESPACE " "
    BY_KW "by"
    WHITESPACE " "
    SESSION_USER_KW "session_user"
    COMMA ","
    WHITESPACE " "
    CURRENT_USER_KW "current_user"
    WHITESPACE " "
    RESTRICT_KW "restrict"
  SEMICOLON ";"
  WHITESPACE "\n\n"
